# tcp-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DEEP_DIVE.md
examples/: __init__.py  echo_client.py  echo_server.py  file_transfer.py
simulator/: __init__.py  network.py
tcp/: __init__.py  buffer.py  congestion.py  connection.py  segment.py  socket.py  states.py  timer.py
tests/: __init__.py  test_buffer.py  test_segment.py  test_states.py
